<resources>
    <string name="app_name">HodooScale</string>
    <string name="not_connected_to_the_Internet">You are not connected to the Internet.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호(8자 이상)</string>
    <string name="prompt_password_check">비밀번호(8자 이상)</string>
    <string name="prompt_nicname">닉네임(9자 이내)</string>
    <string name="prompt_from">거주지역을 입력해주세요.</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="istyle_create_account">계정생성</string>
    <string name="istyle_lost_password">비밀번호를 분실하셨습니까?</string>
    <string name="istyle_label_email">이메일</string>
    <string name="istyle_label_password">비밀번호</string>
    <string name="istyle_label_confirm_password">비밀번호 재확인</string>
    <string name="istyle_label_nickname">닉네임</string>
    <string name="istyle_label_country">국가</string>
    <string name="istyle_label_sex">성별</string>
    <string name="istyle_label_agree">회원약관 및 개인정보수집에 동의합니다.</string>
    <string name="istyle_label_term"><u>회원약관</u></string>
    <string name="istyle_label_private"><u>개인정보 수집 및 이용안내</u></string>
    <string name="istyle_btn_text">계정 생성</string>
    <string name="istyle_enter_the_email">이메일을 입력해주세요.</string>
    <string name="istyle_not_valid_email_format">이메일 형식에 맞지 않습니다.</string>
    <string name="istyle_enter_the_password">비밀번호를 입력하세요.</string>
    <string name="istyle_enter_your_confirmation_password">확인 비밀번호를 입력하세요.</string>
    <string name="istyle_password_is_incorrect">비밀번호가 맞지 않습니다.</string>
    <string name="istyle_enter_your_nik_name">닉네임을 입력하세요.</string>
    <string name="istyle_select_gender">성별을 선택하세요.</string>
    <string name="istyle_enter_your_place_of_residence">거주지를 입력하세요.</string>
    <string name="men">남성</string>
    <string name="woman">여성</string>
    <string name="year">년도</string>
    <string name="month">년도</string>
    <string name="day">일</string>
    <string name="male">수컷</string>
    <string name="femle">암컷</string>
    <string name="pet_width">체장</string>
    <string name="pet_height">체고</string>
    <string name="pet_unit">단위</string>
    <string name="pet_weight">체중</string>
    <string name="pet_temp">온도</string>
    <string name="pet_kg">Kg</string>
    <string name="compleate">완료</string>
    <string name="cancle">취소</string>
    <string name="agree">동의</string>
    <string name="press_back_message">Press \'Back\' button again to exit.</string>
    <string name="password">비밀번호</string>
    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>
    <string name="failed">failed</string>
    <string name="success">성공</string>
    <string name="cup">컵</string>
    <string name="ea">개</string>
    <string name="food">음식</string>
    <string name="edit_success">정보를 변경하였습니다.</string>
    <string name="log_out">로그아웃</string>
    <string name="change_user_account_info">사용자 계정 정보</string>
    <string name="withdraw" translatable="false">회원탈퇴</string>
    <string name="withdraw_subscript" translatable="false">탈퇴하시면 HODOO 서비스를 이용하실 수 없습니다.\n정말 탈퇴하시겠습니까?</string>
    <string name="excess">초과</string>
    <string name="recommend">권장</string>
    <string name="istyle_already_a_member">이미 호두 회원이신가요?</string>
    <string name="istyle_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="login_page_title">LOGIN</string>
    <string name="basin_info_regist_title">펫 추가</string>
    <string name="disease_information_regist_title">펫의 병력</string>
    <string name="physique_information_regist_title">펫의 체격</string>
    <string name="weight_check_title">체중상태 체크</string>
    <string name="weight_title">체중관리</string>
    <string name="temp_title">체온관리</string>
    <string name="meal_title">식사관리</string>
    <string name="hodoo_link_title">함께관리</string>
    <string name="wifi_list_title">와이파이 설정</string>
    <string name="find_hodoo_title">스캐닝</string>
    <string name="istyle_login_title">로그인</string>
    <string name="istyle_statistic">통계</string>
    <string name="istyle_feed">사료</string>
    <string name="istyle_change_password">비밀번호 변경</string>
    <string name="istyle_my_account">내 계정</string>
    <string name="istyle_list_bowelplate">배변판 리스트</string>
    <string name="istyle_select_device">기기선택</string>
    <string name="istyle_setting">설정</string>
    <string name="istyle_management_pet">펫 관리</string>
    <string name="istyle_management_user">유저관리</string>
    <string name="istyle_find_password">비밀번호찾기</string>
    <string name="istyle_setting_menu_my_account">내 계정</string>
    <string name="istyle_setting_menu_notice">공지사항</string>
    <string name="istyle_setting_menu_info_fo_hodoo_scale">호두 스케일 소개</string>
    <string name="istyle_setting_menu_reset_data">데이터 초기화</string>
    <string name="istyle_setting_menu_setting_device">기기 설정</string>
    <string name="istyle_setting_menu_management_user_group">사용자 그룹 관리</string>
    <string name="istyle_setting_menu_management_pet">펫 관리</string>
    <string name="message">Message</string>
    <string name="vailed_email">이메일 형식에 맞지 않습니다.</string>
    <string name="user_regist_failed_message">회원가입에 실패했습니다.</string>
    <string name="user_login_failed_message">로그인에 실패했습니다. 아이디 및 비밀번호를 확인하세요.</string>
    <string name="signup_title">회원가입</string>
    <string name="agree_terms">약관 동의</string>
    <string name="agree_terms_message">개인정보 수집 및 이용에 동의합니다.</string>
    <string name="term_of_service">서비스 이용약관</string>
    <string name="agree_of_service">이용약관에 동의합니다.</string>
    <string name="istyle_agree_to_the_terms">약관에 동의하세요.</string>
    <string name="btn_login">Login</string>
    <string name="login_message1">square </string>
    <string name="login_message2">계정으로</string>
    <string name="login_message3"> Hoodo Fit</string>
    <string name="login_message4"> 로그인</string>
    <string name="add_pet_name">펫의 이름</string>
    <string name="add_pet_type">펫의 품종</string>
    <string name="add_pet_birthday">생년월일</string>
    <string name="add_pet_gender">설별</string>
    <string name="add_pet_neuter">중성화 여부</string>
    <string name="add_pet_next_btn">다음 단계</string>
    <string name="add_pet_edit_hint">품종을 입력하세요</string>
    <string name="required_chioce_disease">질병이 없다면 \'질병없음\'을 선택하세요.</string>
    <string name="physique_information_guide_text1">펫의 정확한 건강관리를 위해 정보를 꼭 입력해주세요.</string>
    <string name="physique_information_guide_text2">체장 : 엉덩이부터 가슴까지</string>
    <string name="physique_information_guide_text3">체고 : 앞 발바닥부터 목과 등의 경계선까지</string>
    <string name="self_check_bcs_info">호두는 BCS기법을 통해 반려동물의 지방 비율을 측정할 수 있습니다.</string>
    <string name="fat_mass">지방량.</string>
    <string name="self_check_desc1">지방량과 과체중</string>
    <string name="self_check_desc2">체지방률이 조금 높아요! 잠까? 운동을 많이 안하셨순요! 이상태로 유지가 된다면 당뇨병, 고혈압 등 심혈관 질환이 발생할 수 있어 조심해야 해요!</string>
    <string name="self_check_desc3">이곳에 해결책이 있어요</string>
    <string name="self_check_desc4">우리같이 운동할까요? 주 2~6회 유산소 운동과 근력 운동을 병행하고 기초대사량에 맞는 식습관으로 개선해서 체지방을 불태워봅시다!!</string>
    <string name="wifi_connection">WIFI 연결</string>
    <string name="wifi_connection_advice">WIFI 신호 상태가 가장 좋은 인터넷을 사용해 주세요.</string>
    <string name="wifi_connection_popup_password_hint">비밀번호를 입력하세요.</string>
    <string name="find_hodoo_message1">Hodoo Scale</string>
    <string name="find_hodoo_message2">연결중입니다. 프리미엄 기기를 공유기에 가까이 놓아주세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="explanation_of_password_change">주기적인 비밀번호 변경은 개인정보를 안전하게 보호하고, 개인정보도용 피해를 예방합니다.</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="password_entry_limit">8자~20자, 영문, 숫자, 특수문자 사용</string>
    <string name="password_hint">현재비밀번호 입력</string>
    <string name="new_password_hint">새비밀번호 입력</string>
    <string name="confirm">확인</string>
    <string name="plus_friend_popup_email_hint">이메일을 입력하세요.</string>
    <string name="istyle_new_group_user">새 구성원</string>
    <string name="device_setting_activity_title">기기변경</string>
    <string name="istyle_firmware_update">펌웨어 업그레이드 1.2.0 업데이트</string>
    <string name="istyle_update">업그레이드</string>
    <string name="istyle_change_wifi_setting">Wifi 변경 설정</string>
    <string name="istyle_remove_bowelplate">체중계 연결 해지</string>
    <string name="istyle_calories_taken_today">오늘 섭취한 칼로리</string>
    <string name="istyle_food_taken_today">오늘 섭취한 음식</string>
    <string name="istyle_check_components">성분확인</string>
    <string name="istyle_select_components_and_units">성분과 단위를 선택해주세요</string>
    <string name="istyle_not_found_bowelplate">주변에 배변판을 찾을 수 없습니다.</string>
    <string name="istyle_retry">다시시도</string>
    <string name="istyle_buy">구입하기</string>
    <string name="istyle_skip">Skip</string>
    <string name="send_btn_text">인증번호 전송</string>
    <string name="cofirm_btn_text">확인</string>
    <string name="istyle_question_of_lost_password">비밀번호를 잊으셨나요?</string>
    <string name="istyle_answer_of_lost_password">괜찮아요, 바로찾을 수 있어요</string>
    <string name="istyle_email_hint">이메일을 입력하세요.</string>
    <string name="istyle_cerification_number_text">이메일을 입력하세요.</string>
    <string name="istyle_today">하루</string>
    <string name="istyle_one_week">한주</string>
    <string name="istyle_one_month">한달</string>
    <string name="istyle_one_year">년</string>
    <string name="istyle_todays_word">오늘의 한마디</string>
    <string name="istyle_todays_word_contnet">대형견에게 칼로리, 단백질, 지방이 많이 함유되어 있는 소형견용 사료를 먹이면 칼슘 과다로 뼈의 성장이 지연되고 고관절 질환으로 이어질 수 있으니 주의하세요!</string>
    <string name="istyle_eating_management">식사관리</string>
    <string name="istyle_record_todays_meal">오늘의 식사를 기록하세요.</string>
    <string name="istyle_todays_prescription">비타민 수치가 과다입니다.</string>
    <string name="istyle_todays_prescription_desc">비타민은 크게 지용성 비타민과 수용성 비타민으로 나눌 수 있습니다. 지용성 비타민은
A, D, E, K의 4가지가 있고, 수용성 비타민은 C, B1, B2 ,B6 ,B12, 엽산, 판토텐산, 비오틴의
8가지가 있습니다. 개는 사람과 달리 비타민C를 몸에서 스스로 만들 수 있으므로 필수
영양소가 아닙니다.
과다한 비타민C는 신장, 방광, 결석과 관련이 있으므로 비타민C가 함유되어 있는 음식은
피하는 것이 좋습니다. 혹시 과다하게 비타민을 주고 계신건 아닌가요?"</string>
    <string name="istyle_bcs_comment">현재 귀하의 반려견은 BCS 4단계로 평균 체중에 비해 과다한 상태입니다. \n 균형잡힌 식단과 올바른 황동으로 반려견의 체중을 관리해주셔야 합니다.</string>
    <string name="istyle_weight_history_of_the_day">오늘의 체중 기록</string>
    <string name="average_weight_for_today">AVERAGE WEIGHT FOR TODAY</string>
    <string name="average_temp_for_today">AVERAGE TEMP FOR TODAY</string>
    <string name="weight_for_today">오늘의 체중</string>
    <string name="temp_for_today">today\'s temp</string>
    <string name="bcs_step_str">BCS STEP</string>
    <string name="bcs_description_str">BCS DESCRIPTION</string>
    <string name="last_sync_refresh_str">Last refresh</string>
    <string name="not_data">No Data</string>
    <string name="today_intake_kcal">일일 섭취 총 칼로리</string>
    <string name="istyle_one_hundred_g_supply">100g 제공 칼로리</string>
    <string name="istyle_kcal">칼로리</string>
    <string name="istyle_one_hundred_g_nutrient_content">100g당 영양소 함유량</string>
    <string name="istyle_add_pet">펫추가</string>
    <string name="compleate_btn_text">완료</string>
    <string name="istyle_new_password_setting">새로운 비밀번호 설정</string>
    <string name="istyle_new_password_setting_hint">새로운 비밀번호 설정</string>
</resources>