<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="activity"
            type="com.animal.scale.hodoo.activity.user.signup.SignUpActivity"/>
        <variable
            name="activityInfo"
            type="com.animal.scale.hodoo.domain.ActivityInfo" />
        <variable
            name="user"
            type="com.animal.scale.hodoo.domain.User" />
        <variable
            name="watcher"
            type="android.text.TextWatcher"/>
        <variable
            name="emailRule"
            type="com.animal.scale.hodoo.util.MyOwnBindingUtil.StringRule"/>
        <variable
            name="errorMsg"
            type="java.lang.String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hodoo_background_color"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.user.signup.SignUpActivity">

        <include
            layout="@layout/common_toolbar"
            bind:activityInfo="@{activityInfo}" />

        <LinearLayout
            android:layout_below="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@={user.email}"
                tools:rule="@{emailRule}"
                tools:errorMsg="@{errorMsg}"
                android:singleLine="true" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:text="@={user.password}"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/passwordCheck"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/prompt_password_check"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_password_check"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:text="@={user.passwordCheck}"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/nick_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/prompt_nicname"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_nicname"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={user.nickname}"
                android:padding="5dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/radio_group_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femle"/>
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/prompt_from"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_from"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={user.from}"
                android:padding="5dp"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:onClick="@{activity::onClickSubmitBtn}"
                android:text="@string/signup_title"
                android:background="@drawable/common_large_btn"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </RelativeLayout>
    <!-- Login progress -->
</layout>