<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.animal.scale.hodoo.activity.user.login.LoginActivity"/>
        <variable
            name="activityInfo"
            type="com.animal.scale.hodoo.domain.ActivityInfo" />
        <variable
            name="user"
            type="com.animal.scale.hodoo.domain.User" />
        <variable
             name="watcher"
             type="android.text.TextWatcher"/>
         <variable
             name="emailRule"
             type="com.animal.scale.hodoo.util.MyOwnBindingUtil.StringRule"/>
         <variable
             name="errorMsg"
             type="java.lang.String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hodoo_background_color"
        android:gravity="center_horizontal"
        tools:context=".activity.user.login.LoginActivity">

        <include
            layout="@layout/common_toolbar"
            bind:activityInfo="@{activityInfo}"/>

        <ScrollView
            android:layout_below="@+id/my_toolbar"
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="66dp"
                        android:src="@drawable/login_bi" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/login_message1"
                            android:textColor="@color/hodoo_midle_pink"
                            android:textSize="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/login_message2"
                            android:textSize="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/login_message3"
                            android:textColor="@color/hodoo_midle_pink"
                            android:textSize="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_message4"
                            android:textSize="10dp" />

                    </LinearLayout>

                </LinearLayout>


                <EditText
                    android:id="@+id/email"
                    style="@style/Edittext.Email"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_email"
                    android:text="@={user.email}"
                    tools:rule="@{emailRule}"
                    tools:errorMsg="@{errorMsg}"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/password"
                    style="@style/Edittext.Password"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_password"
                    android:text="@={user.password}"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/CommonBtn"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_login"
                    android:onClick="@{activity::onClickLoginBtn}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="계정생성"
                        android:onClick="@{activity::onClickCreateAccountBtn}"
                        android:textColor="@color/hodoo_midle_pink"
                        android:textSize="11dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="|" />

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:onClick="@{activity::onClickForgotPasswordBtn}"
                        android:text="비밀번호를 분실하셨습니까?"
                        android:textColor="@color/hodoo_text_gray"
                        android:textSize="11sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>